install plugins too

--- a/.amazeeio.yml
+++ b/.amazeeio.yml
@@ -3,4 +3,5 @@ deploy_tasks:
     before_deploy:
       - npm install gitbook-cli
       - node ./node_modules/gitbook-cli/bin/gitbook.js fetch
+      - node ./node_modules/gitbook-cli/bin/gitbook.js install
       - node ./node_modules/gitbook-cli/bin/gitbook.js build
