--- a/.amazeeio.yml
+++ b/.amazeeio.yml
@@ -2,9 +2,7 @@ sitegroup: docs_amazee_io
 deploy_tasks:
   development:
     before_deploy:
-      - npm install gitbook-cli
-      - node ./node_modules/gitbook-cli/bin/gitbook.js fetch
-      - node ./node_modules/gitbook-cli/bin/gitbook.js install
+      - npm install
       - node ./node_modules/gitbook-cli/bin/gitbook.js build
 versions:
   node: 0.12
