--- a/.amazeeio.yml
+++ b/.amazeeio.yml
@@ -3,4 +3,5 @@ deploy_tasks:
   development:
     before_deploy:
       - npm install
+      - node ./node_modules/gitbook-cli/bin/gitbook.js install
       - node ./node_modules/gitbook-cli/bin/gitbook.js build
