--- a/.bookignore
+++ b/.bookignore
@@ -1,7 +1,7 @@
-.amazeeio.yml
-sites/default/aliases.drushrc.php
 package.json
 node_modules
 docker-compose.yml
 Dockerfile
 docker
+Dockerfile.nginx
+.lagoon.yml
