--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,17 +1,8 @@
 FROM amazeeio/node:8-builder as nodebuilder
-
 RUN echo '{ "allow_root": true }' > /home/.bowerrc
 RUN echo 'unsafe-perm=true' > /home/.npmrc
-
 COPY . /app
-
-RUN npm install
-RUN node ./node_modules/gitbook-cli/bin/gitbook.js install
-RUN node ./node_modules/gitbook-cli/bin/gitbook.js build
-
+RUN yarn install && node ./node_modules/gitbook-cli/bin/gitbook.js install && node ./node_modules/gitbook-cli/bin/gitbook.js build
 
 FROM amazeeio/nginx
-
 COPY --from=nodebuilder /app/_book /app
-
-# Define where the Drupal Root is located
