--- a/.lagoon.yml
+++ b/.lagoon.yml
@@ -1,9 +1,7 @@
 docker-compose-yaml: docker-compose.yml
 
-
-
 environments:
   master:
     routes:
-        - varnish:
-            - "drupal-example.amazee.io"
+        - nginx:
+            - "docs.amazee.io"
