--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -5,4 +5,5 @@ COPY . /app
 RUN yarn install && node ./node_modules/gitbook-cli/bin/gitbook.js install && node ./node_modules/gitbook-cli/bin/gitbook.js build
 
 FROM amazeeio/nginx
+RUN echo "~^changelog.amazee.io   https://docs.amazee.io/changelog.html;" >> /etc/nginx/redirects-map.conf
 COPY --from=nodebuilder /app/_book /app
